[package]
name = "saunadge-rs"
version = "0.1.0"
authors = ["hiromu.nakamura <abctail30@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
serde = "1.0.123"
